# umar_punjabi_agent

./: .gitignore  IMPLEMENTATION_PACKAGE.md
backend/: .env.example  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_memories_table.py  afb3ca01d67e_base_tables.py  f6bf631ab650_pgvector_extension_and_observations_.py
backend/app/: config.py  main.py
backend/app/agents/: deps.py  graph.py  llm.py  state.py
backend/app/agents/nodes/: __init__.py  _helpers.py  committee.py  execute.py  memory_recall.py  research.py  risk.py  signal.py
backend/app/agents/prompts/: __init__.py  committee.py  research.py  risk.py  signal.py  watcher.py
backend/app/api/: deps.py
backend/app/api/routes/: analyze.py  ws.py
backend/app/core/: events.py
backend/app/db/: models.py  session.py
backend/app/observability/: __init__.py  langfuse.py
backend/app/services/: embeddings.py  event_bus.py  graph_runner.py  memory.py  orchestrator.py  paper_engine.py  translator.py
backend/app/tools/: base.py  binance.py  coingecko.py  memory.py  news.py  onchain.py
backend/scripts/: verify_task10.py  verify_task11.py  verify_task12.py  verify_task13.py  verify_task6.py  verify_task7.py  verify_task8.py  verify_task9.py
backend/tests/: stubs.py  test_analyze.py  test_base.py  test_binance.py  test_coingecko.py  test_event_bus.py  test_graph.py  test_langfuse_stub.py  test_llm.py  test_memory.py  test_news.py  test_nodes.py  test_onchain.py  test_paper_engine.py  test_state.py  test_streaming.py  test_translator.py
(+30 files in other folders)
