[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.7",
    "langgraph>=1.2.6",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "sentence-transformers>=4.1.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.36.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["slow: downloads sentence-transformers model"]
